$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

June 17, 2009
-------------
#494642 by merlinofchaos: Integrate better with new Views post rendering
NOISSUE by merlinofchaos, Michelle: Fixed two typos with _advanced_forum_preprocess_forum_topic_list.
#474552 by webchick: Default forum menu link to enabled.

June 16, 2009
-------------
#492922 by conchur: Fixed typo in comment preprocess.

June 15, 2009
-------------
#489044 by Michelle: Split code up into smaller files both to reduce memory requirements and to make it easier to navigate the code.
#491692 by neclimdul: Removed typo'd backslash.
#472736 by Michelle, merlinofchaos: Made jump to last post work with nodecomment.
NOISSUE by Michelle: Code clean up, more comments added.
#472736 by Michelle: Made topic icon recognize new posts in nodecomment.
NOISSUE by Michelle: Added update to set AF's weight to 15. This is needed for the views to work and was missed on earlier commits.
#492590 by merlinofchaos: Wrench comment wrapper back from the clutches of the evil Garland.
#483408 by neclimdul: Notices cleanup.

June 14, 2009
-------------
#484052 by Michelle: Prevent original topic list page from being created when views is enabled.

June 9, 2009
------------
#484052 by Michelle, merlinofchaos: Created view for topic lists.
#484052 by Michelle: Added topic pager.

June 8, 2009
------------
NOISSUE by Michelle: Some cleanup on the node/comment preprocesses.
#472736 by Michelle, merlinofchaos: Made "new posts in forum" work with nodecomment and also made comment version more efficient.

June 7, 2009
------------
#460734 by MGParisi: Removed typo'd extra space.
#473336 by Michelle: Changed to custom version of comment_new_page_count to make it easier to use the NC version when it is ready.

June 5, 2009
------------
#481278 by merlinofchaos: Added search views to forums and individual topics.

June 4, 2009
------------