@@ -118,15 +118,16 @@ function advanced_forum_theme() {
 
   // Topic list as a view
   if (module_exists('views')) {
+/*
     $items['advanced_forum_topic_list_view'] = array(
       'arguments' => array('tid' => NULL),
       'template' => 'advanced_forum-topic-list-view',
     );
-
-    $items['views_view_table__advanced_forum_topic_list'] = array(
+*/
+    $items['views_view_forum_topic_list__advanced_forum_topic_list'] = array(
       'arguments' => array('view' => NULL, 'options' => NULL, 'rows' => NULL, 'title' => NULL),
       'template' => 'advanced_forum-topic-list-view',
-      'original hook' => 'views_view_table',
+      'original hook' => 'views_view_forum_topic_list',
     );
   }
 
@@ -185,7 +186,7 @@ function advanced_forum_theme_registry_alter(&$theme_registry) {
                      'advanced_forum_topic_list_view',
                      'views_view_fields__advanced_forum_search',
                      'views_view_fields__advanced_forum_search_topic',
-                     'views_view_table__advanced_forum_topic_list',
+                     'views_view_forum_topic_list__advanced_forum_topic_list',
                      'advanced_forum_topic_legend',
                      'advanced_forum_forum_legend',
                      'advanced_forum_topic_header',
