@@ -497,7 +497,7 @@ $handler->override_option('empty', 'No posts in this forum.');
 $handler->override_option('empty_format', '1');
 $handler->override_option('items_per_page', 20);
 $handler->override_option('use_pager', '1');
-$handler->override_option('style_plugin', 'table');
+$handler->override_option('style_plugin', 'forum_topic_list');
 $handler->override_option('style_options', array(
   'grouping' => '',
   'override' => 1,
